[package]
name = "stellar-rust-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
url = "2.2.2"
tokio = { version = "1.15.0", features = ["full"] }
stellar-xdr = { version = "0.0.17", features = ["base64"] }

[build-dependencies]