[package]
name = "stellar-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Baseflow/stellar-rust-sdk"
documentation = "https://docs.rs/stellar-rs"
homepage = "https://github.com/Baseflow/stellar-rust-sdk"
description = """
A Rust SDK for the Stellar network.
"""
keywords = ["Stellar", "SDK", "Horizon", "Blockchain", "Cryptocurrency"]
categories = [
    "cryptography",
    "network-programming",
    "blockchain",
    "cryptocurrency",
]
autobenches = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
url = "2.2.2"
tokio = { version = "1.15.0", features = ["full"] }
stellar-xdr = { version = "20.0.0", features = ["base64"] }
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
derive-getters = "0.3.0"
hex = "0.4.3"
base64 = "0.21.4"
chrono = "0.4.31"
lazy_static = "1.4.0"
stellar_rust_sdk_derive = { path = "../stellar_rust_sdk_derive", version = "0.1.0" }
