[package]
name = "stellar-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/Baseflow/stellar-rust-sdk"
documentation = "https://docs.rs/stellar-rs"
homepage = "https://github.com/Baseflow/stellar-rust-sdk"
description = """
A Rust SDK for the Stellar network.
"""
keywords = ["Stellar", "SDK", "Horizon", "Blockchain", "Cryptocurrency"]
categories = [
    "cryptography",
    "network-programming",
    "cryptography::cryptocurrencies"
]
autobenches = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
url = "2.5.2"
tokio = { version = "1.15.0", features = ["full"] }
stellar-xdr = { version = "21.2.0", features = ["base64"] }
serde_json = "1.0.120"
serde = { version = "1.0.188", features = ["derive"] }
derive-getters = "0.4.0"
hex = "0.4.3"
base64 = "0.22.1"
chrono = "0.4.38"
lazy_static = "1.5.0"
stellar_rust_sdk_derive = { path = "../stellar_rust_sdk_derive", version = "0.1.0" }
