[package]
name = "stellar_rust_sdk_derive"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/Baseflow/stellar-rust-sdk"
documentation = "https://docs.rs/stellar-rs"
homepage = "https://github.com/Baseflow/stellar-rust-sdk"
description = """
Derive proc-macro's for the Rust SDK for the Stellar network.
"""
keywords = ["Stellar", "SDK", "Horizon", "Blockchain", "Cryptocurrency"]
categories = [
    "cryptography",
    "network-programming",
    "blockchain",
    "cryptocurrency",
]
autobenches = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = "2.0"

[lib]
proc-macro = true
